--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-blockies": "^1.4.4",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "@web3modal/ethers": "^4.2.2",
     "ethers": "^6.15.0",
